# gym_custom_env_RL

./: README.md  main.py  pyproject.toml
log/ppo_cpp_10_12_400_0.05_20260507_151104_curriculum/: events.out.tfevents.1778177464.BrunoDrezzaPC.17976.0  progress.csv
log/ppo_cpp_5_3_200_0.05_20260507_142958/: events.out.tfevents.1778174998.BrunoDrezzaPC.17268.0  progress.csv
log/ppo_cpp_smart_10_12_400_0.05_20260507_233230_curriculum/: events.out.tfevents.1778207550.BrunoDrezzaPC.15568.0  progress.csv
log/ppo_cpp_smart_10_12_400_0.05_20260508_051447_curriculum/: events.out.tfevents.1778228087.BrunoDrezzaPC.14608.0  progress.csv
log/ppo_cpp_smart_20_48_800_0.05_20260508_142230_curriculum/: events.out.tfevents.1778260950.BrunoDrezzaPC.8392.0  progress.csv
log/ppo_cpp_smart_5_3_200_0.05_20260507_223408/: events.out.tfevents.1778204048.PC.16780.0  progress.csv
log/ppo_cpp_smart_5_3_200_0.05_20260507_224624/: events.out.tfevents.1778204784.PC.20744.0  progress.csv
log/ppo_cpp_smart_5_3_200_0.05_20260507_225111/: events.out.tfevents.1778205071.BrunoDrezzaPC.26296.0  progress.csv
log/ppo_cpp_smart_5_3_200_0.05_20260508_031019/: events.out.tfevents.1778220619.BrunoDrezzaPC.27404.0  progress.csv
src/: evaluate_all.py  plot_learning_curve.py  train_grid_world_cpp.py
src/gymnasium_env/: grid_world_cpp.py  grid_world_cpp_smart.py
