[project]
name = "gym-custom-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "numpy>=2.4.4",
    "pygame>=2.6.1",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.8.0",
    "tensorboard>=2.20.0",
    "typing>=3.10.0.0",
]
